WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288702
REGRESSION(
290563@main
): [UnifiedPDF] [iOS] Web content process jetsams while zooming when find-in-page results are presented
https://bugs.webkit.org/show_bug.cgi?id=288702
Summary
REGRESSION(290563@main): [UnifiedPDF] [iOS] Web content process jetsams while...
Abrar Rahman Protyasha
Reported
2025-02-26 23:11:58 PST
rdar://145686833
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-02-26 23:29:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41498
EWS
Comment 2
2025-02-27 08:57:45 PST
Committed
291230@main
(9b7724366bad): <
https://commits.webkit.org/291230@main
> Reviewed commits have been landed. Closing PR #41498 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug