REGRESSION(290563@main): [UnifiedPDF] [iOS] Web content process jetsams while zooming when find-in-page results are presented https://bugs.webkit.org/show_bug.cgi?id=288702 rdar://145686833

Reviewed by Aditya Keerthi.

In 290563@main, we introduced a behavior change where, for main frame
plugins on iOS, we would only apply the new page scale factor from a
visible content rects update if we were in steady state, i.e. at the end
of pinch gestures.

This change meant that when we would pinch out, since the new page scale
factor was not applied, there was an unnecessarily large number of tiles
for the find overlay layer - all of which were full resolution too. This
caused unnecessary memory spikes in the web content process and lead to
crossing the memory watermark on said process when pinch zooming around
while the find overlay was up.

This patch addresses the bug by partially reverting the behavior change
introduced in 290563@main. We do not require being in steady state to
apply page scale factor anymore. This also means that we align better
with pinch zooming behavior on general web content in iOS, in that the
content remains sharp throughout the gesture.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateVisibleContentRects):

Canonical link: https://commits.webkit.org/291230@main